# ga-core-rs

./: AGENT.md  Cargo.toml  INTEGRATION.md  README.md
src/: agent_physics.rs  conformal.rs  lib.rs  multivector.rs  rotor.rs
